fix(prism-view): fix double view

--- a/packages/au2-prism/dev-app/my-app.html
+++ b/packages/au2-prism/dev-app/my-app.html
@@ -7,4 +7,4 @@
 <pre><code innerhtml.bind="prismRef.code"></code></pre>
 
 <h2>Prism View</h2>
-<prism-view code.bind="prismRef.code" language="javascript"></prism-editor>
+<prism-view code.bind="prismRef.code" language="javascript"></prism-view>
