fix(base-component): aurelia alpha 35

--- a/packages/au2-base-component/dev-app/demo-au-slot.html
+++ b/packages/au2-base-component/dev-app/demo-au-slot.html
@@ -3,7 +3,8 @@
     <a repeat.for="slotName of auSlotNames"
         class="nav-link ${slotName === tabSlot ? 'active' : ''} pointer"
         id="${uid}-${slotName}-tab"
-        role="tab" aria-controls="${uid}-${slotName}-content" aria-selected="true" click.delegate="select(slotName)">${slotName}</a>
+        role="tab" aria-controls="${uid}-${slotName}-content"
+        aria-selected="true" click.delegate="select(slotName)">${slotName}</a>
   </div>
 </nav>
 
