--- a/packages/au2-base-component/dev-app/my-app.html
+++ b/packages/au2-base-component/dev-app/my-app.html
@@ -9,8 +9,8 @@
   </span>
 </demo-component>
 
-<button click.delegate="demoComponent.select('two')">To Two</button>
-<button click.delegate="demoComponent.select('one')">To One</button>
+<button click.trigger="demoComponent.select('two')">To Two</button>
+<button click.trigger="demoComponent.select('one')">To One</button>
 
 <hr>
 
@@ -25,5 +25,5 @@
   </span>
 </demo-au-slot>
 
-<button click.delegate="demoComponent2.select('two')">To Two</button>
-<button click.delegate="demoComponent2.select('one')">To One</button>
+<button click.trigger="demoComponent2.select('two')">To Two</button>
+<button click.trigger="demoComponent2.select('one')">To One</button>
