--- a/packages/au2-base-component/dev-app/demo-au-slot.html
+++ b/packages/au2-base-component/dev-app/demo-au-slot.html
@@ -4,7 +4,7 @@
         class="nav-link ${slotName === tabSlot ? 'active' : ''} pointer"
         id="${uid}-${slotName}-tab"
         role="tab" aria-controls="${uid}-${slotName}-content"
-        aria-selected="true" click.delegate="select(slotName)">${slotName}</a>
+        aria-selected="true" click.trigger="select(slotName)">${slotName}</a>
   </div>
 </nav>
 
