feat(aurelia-v2b8): bump aurelia2 to beta 8

--- a/packages/au2-base-component/dev-app/my-app.html
+++ b/packages/au2-base-component/dev-app/my-app.html
@@ -1,4 +1,4 @@
-<demo-component view-model.ref="demoComponent">
+<demo-component component.ref="demoComponent">
   <span slot="one" title="French">
     <h5>Second slide label</h5>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -14,7 +14,7 @@
 
 <hr>
 
-<demo-au-slot view-model.ref="demoComponent2">
+<demo-au-slot component.ref="demoComponent2">
   <span au-slot="one" title="French">
     <h5>Second slide label</h5>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
