--- a/packages/au2-prism/dev-app/my-app.html
+++ b/packages/au2-prism/dev-app/my-app.html
@@ -1,5 +1,5 @@
 <h2>Prism Editor</h2>
-<prism-editor view-model.ref="prismRef" code="const myVar = { code: 'quantum', title: 'Unknown', where: 'Who know' };" language="javascript"></prism-editor>
+<prism-editor component.ref="prismRef" code="const myVar = { code: 'quantum', title: 'Unknown', where: 'Who know' };" language="javascript"></prism-editor>
 
 <button click.trigger="prismRef.code = 'Ok ok'">Change !</button>
 
