test(prism-editor): ResizeObserver

--- a/packages/au2-prism/src/prism-editor.html
+++ b/packages/au2-prism/src/prism-editor.html
@@ -42,4 +42,4 @@
     </div>
   </div>
 </div>
-<span ref="measureRef" class="" style="position: absolute;bottom: 8px;white-space:pre">M</span>
+<span ref="measureRef" class="" style="visibility: hidden; position: absolute;white-space:pre"></span>
